--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
     "module": "esnext",
     "target": "esnext",
     "lib": ["es6", "dom", "dom.iterable", "esnext"],
+    "noImplicitReturns": false,
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
     "importHelpers": true,
